--- a/lab1/bai4.html
+++ b/lab1/bai4.html
@@ -10,7 +10,7 @@
 <body>
 
     <script>
-        function solveTip(billValue) {
+        function calcTip(billValue) {
             var tipValue = billValue <= 300 && billValue >= 50 ?
                 billValue * 0.15 :
                 billValue * 0.2;
@@ -19,9 +19,9 @@
         }
         
         console.log('Data 1: Test for bill values 270, 40 and 430'); 
-        solveTip(270); 
-        solveTip(40); 
-        solveTip(430); 
+        calcTip(270); 
+        calcTip(40); 
+        calcTip(430); 
     </script>
 </body>
 
